<resources>
    <string name="app_name">GiftKart</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="search_title">Search</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="as_per_the_requirement_of_the_customization">As per the requirement of the customization</string>
    <string name="upload_image">Upload Image</string>

    <string name="name_to_be_displayed">Name to be Displayed</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="wishlist">WishList</string>
    <string name="description_and_customisation">Description and Customisation</string>

    <string name="customize">Customize</string>
    <string name="you_do_not_have_any_favourite_items">You Do Not Have Any Favourite Items</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="hii">Hii!!</string>
    <string name="email">Email</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="todo">TODO</string>


</resources>