<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ItemDetailsFragment"
    android:background="@color/brown">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"

            android:src="@drawable/c"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/description_and_customisation"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/customize"
            android:textColor="#5D4037"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_cust"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/btn_fav"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_favorite_24"
                android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_toEndOf="@id/btn_fav"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_favorite_24"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btn_crt"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:drawableStart="@drawable/ic_baseline_home_24"

                android:text="@string/add_to_cart"
                android:textColor="#5D4037" />


        </RelativeLayout>




    </RelativeLayout>
</ScrollView>