<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CustomizationFragment"
    android:background="@color/brown">


    <TextView
        android:id="@+id/txt_vw"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/as_per_the_requirement_of_the_customization"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@id/txt_vw"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/line_1" />

    <ImageView
        android:id="@+id/img_upld"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/divider"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/c"
        android:contentDescription="@string/todo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btn_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginStart="19dp"
        android:layout_marginTop="123dp"
        android:layout_toEndOf="@id/img_upld"
        android:text="@string/upload_image"
        android:textColor="#5D4037"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/divider2"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@id/txt_vw"
        android:layout_marginStart="10dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/line_1" />
    <TextView
        android:id="@+id/txt_vw2"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Enter the Name to be Displayed on the Product"
        android:textColor="#000000"
        android:textSize="20sp"

        android:layout_below="@id/divider2"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_vw2"
        android:ems="10"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="textPersonName"
        android:hint="Name"
        android:padding="10dp"/>
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/editTextTextPersonName"/>
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_marginTop="20dp"
        android:layout_below="@id/editTextTextPersonName"
        android:layout_toRightOf="@id/reset"
        android:layout_marginLeft="20dp"/>



</RelativeLayout>